--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,3 @@
 option_settings:
-    aws:elasticbeanstalk:container:python
+    aws:elasticbeanstalk:container:python:
         WSGIPath:drf_jwt_backend.wsgi:application
